force-app/main/default/objects/BMCServiceDesk__Survey__c/BMCServiceDesk__Survey__c.object-meta.xml
<CustomObject>
    <description>Stores the information regarding surveys</description>
    <label>Survey</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Response #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Surveys</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>