force-app/main/default/objects/BMCServiceDesk__Survey__c/fields/BMCServiceDesk__Incident__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__Incident__c</fullName>
    <formula>BMCServiceDesk__FKIncident__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Incident #</label>
    <type>Text</type>
</CustomField>