force-app/main/default/objects/BMCServiceDesk__Survey__c/fields/BMCServiceDesk__Response_Timeliness__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__Response_Timeliness__c</fullName>
    <inlineHelpText>How responsive was the Service Desk?</inlineHelpText>
    <label>Response Timeliness</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Extremely responsive</fullName>
            </value>
            <value>
                <fullName>Very responsive</fullName>
            </value>
            <value>
                <fullName>Moderately responsive</fullName>
            </value>
            <value>
                <fullName>Slightly responsive</fullName>
            </value>
            <value>
                <fullName>Not responsive at all</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>