force-app/main/default/objects/BMCServiceDesk__Survey__c/fields/BMCServiceDesk__Satisfaction__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__Satisfaction__c</fullName>
    <inlineHelpText>Did the assistance provided meet your satisfaction?</inlineHelpText>
    <label>Satisfaction</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Extremely satisfied</fullName>
            </value>
            <value>
                <fullName>Very satisfied</fullName>
            </value>
            <value>
                <fullName>Moderately satisfied</fullName>
            </value>
            <value>
                <fullName>Slightly satisfied</fullName>
            </value>
            <value>
                <fullName>Not satisfied at all</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>