force-app/main/default/objects/BMCServiceDesk__Survey__c/fields/BMCServiceDesk__Service_Desk_Performance__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__Service_Desk_Performance__c</fullName>
    <inlineHelpText>How well did the Service Desk handle your request?</inlineHelpText>
    <label>Service Desk Performance</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Extremely well</fullName>
            </value>
            <value>
                <fullName>Very well</fullName>
            </value>
            <value>
                <fullName>Moderately well</fullName>
            </value>
            <value>
                <fullName>Slightly well</fullName>
            </value>
            <value>
                <fullName>Not well at all</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>