force-app/main/default/objects/BMCServiceDesk__Survey__c/fields/BMCServiceDesk__Staff_Effectiveness__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__Staff_Effectiveness__c</fullName>
    <inlineHelpText>How would you rate the knowledge and attitude of the analyst?(1=Poor, 5=Outstanding)</inlineHelpText>
    <label>Staff Effectiveness</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>