force-app/main/default/objects/BMCServiceDesk__Survey__c/fields/BMCServiceDesk__SurveyFor__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__SurveyFor__c</fullName>
    <formula>BMCServiceDesk__FKIncident__r.BMCServiceDesk__Type__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Survey For</label>
    <type>Text</type>
</CustomField>